VM Start refactor
